--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.15.3",
+    "@types/three": "^0.182.0",
+    "gsap": "^3.14.2",
     "next": "^14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
